# multimodal-ai-poc

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
doggos/doggos.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/example_app/: main.py
src/multimodal_ai_poc/: __main__.py  embeddings.py  model_refs_helper.py  similar_images.py
src/multimodal_ai_poc/train/: main.py  model.py  preprocessor.py
src/multimodal_ai_poc/util/: model_refs_helper.py
tasks/: check.just  docker.just  project.just
tests/: test_scripts.py
tests/multimodal_ai_poc/: conftest.py  test_embeddings.py  test_poc.py  test_similar_images.py
